# shopify-price-monitor

./: .gitignore  LICENSE  README.md  make_portfolio_csv.py  pyproject.toml  sample_slack_alert.txt
dashboard/: app.py
docs/demo/: HOW_TO_RECORD_DEMO.md  current_prices.csv  current_prices_portfolio.csv  price_changes.csv  price_changes_portfolio.csv
examples/: targets_beautybakerie.csv  targets_example.csv
src/price_monitor/: __init__.py  cli.py  diff.py  export_csv.py  http_client.py  models.py  normalize.py  notify_slack.py  shopify.py  storage_sqlite.py
tests/: conftest.py  test_core.py
tests/fixtures/: products_page1.json
