[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "price-monitor-portfolio"
version = "0.1.0"
description = "Shopify storefront competitor price & stock monitor (portfolio project)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
price-monitor = "price_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
